# Magma

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  clean.bat
Forge/: CMakeLists.txt
Forge/Include/: App.hxx
Forge/Source/: App.cxx  Main.cxx
Include/: Magma.hxx
Include/Magma/: EntryPoint.hxx  Test.hxx  Types.hxx
Include/Magma/Core/: Application.hxx  Initialize.hxx  Logger.hxx  Shutdown.hxx  Version.hxx
Include/Magma/Debug/: Logger.hxx
Sandbox/: CMakeLists.txt
Sandbox/Source/: Sandbox.cxx
Source/: Test.cxx
Source/Core/: Application.cxx  Initialize.cxx  Logger.cxx  Shutdown.cxx  Version.cxx
Source/Debug/: Logger.cxx
